add_executable(${PROJECT_NAME}-test
  tests/cartridge/mappers/mapper0.cpp
  tests/cartridge/mappers/mapper1.cpp
  tests/cartridge/mappers/mapper3.cpp
  tests/cpu/apu/channels/dmc.cpp
  tests/cpu/apu/channels/noise.cpp
  tests/cpu/apu/channels/pulse.cpp
  tests/cpu/apu/channels/triangle.cpp
  tests/cpu/apu/framecounter.cpp
  tests/cpu/apu/power.cpp
  tests/cpu/instructions/adc.cpp
  tests/cpu/instructions/and.cpp
  tests/cpu/instructions/asl.cpp
  tests/cpu/instructions/bcc.cpp
  tests/cpu/instructions/bcs.cpp
  tests/cpu/instructions/beq.cpp
  tests/cpu/instructions/bit.cpp
  tests/cpu/instructions/bmi.cpp
  tests/cpu/instructions/bne.cpp
  tests/cpu/instructions/bpl.cpp
  tests/cpu/instructions/brk.cpp
  tests/cpu/instructions/bvc.cpp
  tests/cpu/instructions/bvs.cpp
  tests/cpu/instructions/clc.cpp
  tests/cpu/instructions/cld.cpp
  tests/cpu/instructions/cli.cpp
  tests/cpu/instructions/clv.cpp
  tests/cpu/instructions/cmp.cpp
  tests/cpu/instructions/cpx.cpp
  tests/cpu/instructions/cpy.cpp
  tests/cpu/instructions/dec.cpp
  tests/cpu/instructions/dex.cpp
  tests/cpu/instructions/dey.cpp
  tests/cpu/instructions/eor.cpp
  tests/cpu/instructions/inc.cpp
  tests/cpu/instructions/inx.cpp
  tests/cpu/instructions/iny.cpp
  tests/cpu/instructions/jmp.cpp
  tests/cpu/instructions/jsr.cpp
  tests/cpu/instructions/lda.cpp
  tests/cpu/instructions/ldx.cpp
  tests/cpu/instructions/ldy.cpp
  tests/cpu/instructions/lsr.cpp
  tests/cpu/instructions/nop.cpp
  tests/cpu/instructions/ora.cpp
  tests/cpu/instructions/pha.cpp
  tests/cpu/instructions/php.cpp
  tests/cpu/instructions/pla.cpp
  tests/cpu/instructions/plp.cpp
  tests/cpu/instructions/rol.cpp
  tests/cpu/instructions/ror.cpp
  tests/cpu/instructions/rti.cpp
  tests/cpu/instructions/rts.cpp
  tests/cpu/instructions/sbc.cpp
  tests/cpu/instructions/sec.cpp
  tests/cpu/instructions/sed.cpp
  tests/cpu/instructions/sei.cpp
  tests/cpu/instructions/sta.cpp
  tests/cpu/instructions/stx.cpp
  tests/cpu/instructions/sty.cpp
  tests/cpu/instructions/tax.cpp
  tests/cpu/instructions/tay.cpp
  tests/cpu/instructions/tsx.cpp
  tests/cpu/instructions/txa.cpp
  tests/cpu/instructions/txs.cpp
  tests/cpu/instructions/tya.cpp
  tests/cpu/memory.cpp
  tests/cpu/nmi.cpp
  tests/cpu/power.cpp
  tests/nesturbia/memory.cpp
  tests/ppu/power.cpp
  tests/ppu/registers.cpp
  tests/ppu/timing.cpp
)

set_target_properties(${PROJECT_NAME}-test PROPERTIES CXX_STANDARD 17)
set_target_properties(${PROJECT_NAME}-test PROPERTIES CXX_STANDARD_REQUIRED ON)

target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME} Catch2::Catch2WithMain)
